k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webserver
  labels:
    tier: backend
spec:
  selector:
    app: go-webserver
    tier: backend
  ports:
    - protocol: TCP
      port: 80
